# ae-insurance-analytics

./: .gitignore  README.md  pyproject.toml
insurance_semantic_layer/: .gitignore  README.md  dbt_project.yml  profiles.yml
insurance_semantic_layer/analyses/: q1_loss_ratio_by_policy_type.sql  q2_active_policy_count.sql  q3_avg_days_to_settlement.sql  q4_customer_360_view.sql
insurance_semantic_layer/macros/: generate_schema_name.sql
insurance_semantic_layer/models/marts/: _marts__models.yml  dim_customers.sql  dim_dates.sql  fct_claims.sql  fct_policies.sql  fct_policy_summary.sql  fct_transactions.sql
insurance_semantic_layer/models/semantic/: metrics.yml  sem_claims.yml  sem_policies.yml
insurance_semantic_layer/models/staging/: _insurance__sources.yml  _stg_insurance__models.yml  stg_claims.sql  stg_customers.sql  stg_policies.sql  stg_transactions.sql
insurance_semantic_layer/seeds/: raw_claims_2hr.csv  raw_customers_2hr.csv  raw_policies_2hr.csv  raw_transactions_2hr.csv
